--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,9 +12,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Title<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
+                <div class="intro-heading">IndiQ Meetups<br></div>
+                <div class="intro-lead-in">2 Feb 2019</div>
+                <div class="intro-lead-in">Hyderabad & New Delhi</div>
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
