--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -14,7 +14,7 @@
             <div class="intro-text">
                 <div class="intro-heading">IndiQ Meetups<br></div>
                 <div class="intro-lead-in">2 Feb 2019</div>
-                <div class="intro-lead-in">Hyderabad & New Delhi</div>
+                <div class="intro-lead-in">Hyderabad</div>
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -24,7 +24,7 @@
     {% include 2017_data/speakers.html %}
     {% include 2017_data/about.html %}
     {% include 2017_data/sponsors.html %}
-    {% include 2016_data/contact.html %}
+    <!--{% include 2016_data/contact.html %}-->
     {% include 2016_data/footer.html %}
     {% include 2017_data/speakers_info.html %}
     {% include 2016_data/js.html %}
