--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -13,8 +13,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">IndiQ Meetups<br></div>
-                <div class="intro-lead-in">2 Feb 2019</div>
-                <div class="intro-lead-in">Hyderabad</div>
+                <div class="intro-lead-in">Monthly quantum computing meetups across India</div>
                 <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -22,7 +21,7 @@
 
     {% include 2017_data/intro.html %}
     {% include 2017_data/speakers.html %}
-    {% include 2017_data/about.html %}
+    <!--{% include 2017_data/about.html %}-->
     {% include 2017_data/sponsors.html %}
     <!--{% include 2016_data/contact.html %}-->
     {% include 2016_data/footer.html %}
