remove additional pages on home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,6 +19,9 @@
         </div>
     </header>
 
+    {% include 2017_data/intro.html %}
+    {% include 2017_data/footer.html %}
+    {% include 2017_data/js.html %}
 
     </body>
 </html>
