--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="../css/2017_style/img/logos/indiq-logo.png" style="margin-top:-15px" width="150px" alt="indiq"></a>
+                <a class="navbar-brand page-scroll" href="/"><img src="{{ site.baseurl }}/css/2017_style/img/logos/indiq-logo.png" style="margin-top:-15px" width="150px" alt="indiq"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
