--- a/_layouts/meetup.html
+++ b/_layouts/meetup.html
@@ -4,6 +4,7 @@ layout: default
 <section>
   <article class="post">
     <h1>{{ page.title }}</h1>
+    <h2>{{ page.city }}</h2>
 
     <div class="entry">
       {{ content }}
