--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
     {% seo %}
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/2016_style/style.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
 
     <!--Google Analytics SCRIPT-->
     <script>
@@ -27,7 +27,7 @@
     <BODY ondragstart="return false;" ondrop="return false;">
 
     <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/2016_style/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
@@ -35,7 +35,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- WEBSITE ICON IN BROWSER -->
-    <link rel="icon" type="image/png" href="{{ site.baseurl }}/css/2016_style/img/icon.png">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/css/img/icon.png">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
