add cover photo to events, remove thumbnail, img-alt

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,7 +14,7 @@
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            <img src="img/meetup/{{ post.img }}" class="img-responsive img-centered" alt="">
                             <p>{{ post.content }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
