--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -16,7 +16,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                        <img src="img/meetup/{{ post.img }}" class="img-responsive img-centered" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h5>{{ post.date | date: "%a, %e %b, %I:%M %p"}}</h5>
