remove about and contact section

--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,6 @@
- <!-- Portfolio Modals -->
+ <!-- Event Modals -->
  {% for post in site.posts %}
-    <div class="portfolio-modal modal fade" id="portfolioModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="event-modal modal fade" id="eventModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
