--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,19 +19,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#missions">Missions</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +40,7 @@
             <div class="intro-text">
                 <div class="intro-heading">IndiQ Meetups</div>
                 <div class="intro-lead-in">Quantum Computing Community across India</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#missions" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
