--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,9 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include services.html %}
+    {% include missions.html %}
     {% include event_grid.html %}
-    {% include about.html %}
     {% include team.html %}
-    {% include clients.html %}
-    {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
