change mission statement

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#missions">Missions</a>
+                        <a class="page-scroll" href="#mission">Mission</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#events">Events</a>
@@ -40,7 +40,7 @@
             <div class="intro-text">
                 <div class="intro-heading">IndiQ Meetups</div>
                 <div class="intro-lead-in">Quantum Computing Community across India</div>
-                <a href="#missions" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#mission" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
