--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <body id="page-top" class="index">
 
     {% include header.html %}
-    {% include missions.html %}
+    {% include mission.html %}
     {% include event_grid.html %}
     {% include team.html %}
     {% include footer.html %}
