--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,22 +1,26 @@
 <!-- Clients Aside -->
-    <aside class="clients">
+    <section id="sponsors" class="sponsors">
         <div class="container">
             <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Sponsors</h2>
+                </div>
+            </div>
+            <div class="row">
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/ibm.png" class="img-responsive img-centered" alt="">
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="https://qiskit.org/">
+                        <img src="img/logos/qiskit.png" class="img-responsive img-centered img-sponsors">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/qiskit.png" class="img-responsive img-centered" alt="">
+                    <a href="https://www.ibm.com/">
+                        <img src="img/logos/ibm.png" class="img-responsive img-centered img-sponsors">
                     </a>
                 </div>
                 <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/t-hub.jpg" class="img-responsive img-centered" alt="">
-                    </a>
                 </div>
             </div>
         </div>
-    </aside>
+    </sections>
