--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include header.html %}
     {% include mission.html %}
     {% include event_grid.html %}
+    {% include sponsors.html %}
     {% include team.html %}
     {% include footer.html %}
     {% include modals.html %}
