modify mission statement

--- a/_includes/mission.html
+++ b/_includes/mission.html
@@ -15,7 +15,7 @@
                         <i class="fa fa-group fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Meetups</h4>
-                    <p class="text-muted">Organising monthly quantum computing meetups in major cities of India.</p>
+                    <p class="text-muted">We organise monthly meetups in major cities of India to connect quantum computing enthusiasts.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -23,7 +23,7 @@
                         <i class="fa fa-book fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Study Sessions</h4>
-                    <p class="text-muted">Scheduling online and in-person group study sessions covering open-source materials in quantum computing.</p>
+                    <p class="text-muted">We host online and in-person study sessions covering open-source materials in quantum computing to help more people take their first steps in the field.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -31,7 +31,7 @@
                         <i class="fa fa-trophy fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Hackathons</h4>
-                    <p class="text-muted">Organizing 24-hour fun and intensive hackathons to test skills and push boundaries.</p>
+                    <p class="text-muted">We organize 24-hour fun and intensive hackathons to incubate projects that people can bring home and keep working on afterwards.</p>
                 </div>
             </div>
         </div>
