--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -23,7 +23,7 @@ body {
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.75;
 }
 
@@ -335,14 +335,20 @@ section {
 section h2.section-heading {
     margin-top: 0;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 36px;
+}
+
+section h2.section-subheading {
+    text-transform: none;
+    font-size: 32px;
+    font-weight: 400;
 }
 
 section h3.section-subheading {
     margin-bottom: 75px;
     text-transform: none;
     font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
+    font-size: 20px;
     font-style: italic;
     font-weight: 400;
 }
@@ -423,9 +429,6 @@ section h3.section-subheading {
 
 #events .event-item .event-caption p {
     margin: 0;
-    font-family: {{ site.data.template.font.secondary }};
-    font-size: 16px;
-    font-style: italic;
 }
 
 #events * {
