--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,21 +15,19 @@
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
                             <img src="img/meetup/{{ post.img }}" class="img-responsive img-centered" alt="">
-                            <p>{{ post.content }}</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
-                                    </strong>
-                                </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
-                                    </strong>
+                                    <strong>{{ post.date | date: "%a, %e %b, %I:%M %p"}}</strong>
+                                </li>
+                                <li>Venue:
+                                    <strong>{{ post.venue }}, {{post.city}}</strong>
                                 </li>
                                 <li>Service:
                                     <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
                                     </strong>
                                 </li>
                             </ul>
+                            <p>{{ post.content }}</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
