add slack on social section

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,4 +1,4 @@
-<!-- Clients Aside -->
+<!-- Sponsors Section-->
     <section id="sponsors" class="sponsors">
         <div class="container">
             <div class="row">
