--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% include event_grid.html %}
     {% include sponsors.html %}
     {% include team.html %}
+    {% include social.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
