use config.yml for social list

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -735,6 +735,11 @@ section#contact .text-danger {
     color: #e74c3c;
 }
 
+section#social {
+    padding: 100px 0;
+    text-align: center;
+}
+
 footer {
     padding: 25px 0;
     text-align: center;
