add Find Us scroll to social media to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,9 @@
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#social">Find Us</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
