--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -2,25 +2,19 @@
     <section id="sponsors" class="sponsors">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12">
                     <h2 class="section-heading">Sponsors</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://qiskit.org/">
-                        <img src="img/logos/qiskit.png" class="img-responsive img-centered img-sponsors">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="https://www.ibm.com/">
-                        <img src="img/logos/ibm.png" class="img-responsive img-centered img-sponsors">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li><a href="https://qiskit.org/"><img src="img/logos/qiskit.png" class="img-responsive img-centered img-sponsors"></a>
+                        </li>
+                        <li><a href="https://www.ibm.com/"><img src="img/logos/ibm.png" class="img-responsive img-centered img-sponsors"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </sections>
+    </section>
