--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -9,10 +9,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <ul class="list-inline">
-                        <li><a href="https://qiskit.org/"><img src="img/logos/qiskit.png" class="img-responsive img-centered img-sponsors"></a>
+                        {% for sponsor in site.sponsors %}
+                        <li><a href="{{sponsor.url}}"><img src="img/logos/{{sponsor.name}}.png" class="img-responsive img-centered img-sponsors"></a>
                         </li>
-                        <li><a href="https://www.ibm.com/"><img src="img/logos/ibm.png" class="img-responsive img-centered img-sponsors"></a>
-                        </li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
