try to use city and date to name event modal but failed

--- a/_includes/event_grid.html
+++ b/_includes/event_grid.html
@@ -9,8 +9,13 @@
             </div>
             <div class="row">
             {% for post in site.posts %}
+                {% if post.city == "New Dehli" %}
+                    {% capture eventid %}New-Dehli-{{ post.date | date: "%b-%Y"}}{% endcapture %}
+                {% else %}
+                    {% capture eventid %}{{ post.city }}-{{ post.date | date: "%b-%Y"}}{% endcapture %}
+                {% endif %}
                 <div class="col-md-4 col-sm-6 event-item">
-                    <a href="#eventModal{{ post.modal-id }}" class="event-link" data-toggle="modal">
+                    <a href="#{{eventid}}" class="event-link" data-toggle="modal">
                         <div class="event-hover">
                             <div class="event-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
