--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,6 +1,11 @@
  <!-- Event Modals -->
  {% for post in site.posts %}
-    <div class="event-modal modal fade" id="eventModal{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+    {% if post.city == "New Dehli" %}
+        {% capture eventid %}New-Dehli-{{ post.date | date: "%b-%Y"}}{% endcapture %}
+    {% else %}
+        {% capture eventid %}{{ post.city }}-{{ post.date | date: "%b-%Y"}}{% endcapture %}
+    {% endif %}
+    <div class="event-modal modal fade" id="{{eventid}}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
