remove space in city name and use it as event modal name

--- a/_includes/event_grid.html
+++ b/_includes/event_grid.html
@@ -8,11 +8,11 @@
                 </div>
             </div>
             <div class="row">
-            {% assign eventid = 1 %}
             {% for post in site.posts %}
-                {% increment eventid %}
+                <!-- Remove space in city names such as "New Dehli" => "NewDelhi"-->
+                {% capture eventid %}{{ post.city | remove: " "}}-{{ post.date | date: "%b-%Y"}}{% endcapture %}
                 <div class="col-md-4 col-sm-6 event-item">
-                    <a href="#event-{{eventid}}" class="event-link" data-toggle="modal">
+                    <a href="#{{eventid}}" class="event-link" data-toggle="modal">
                         <div class="event-hover">
                             <div class="event-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
