--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Team</h2>
-                    <h3 class="section-subheading text-muted">We are a student-initiative group working to promote quantum computing awareness and education in India.</h3>
+                    <h3 class="section-subheading text-muted">We are an independent group working to promote quantum computing awareness and education in India.</h3>
                 </div>
             </div>
             <div class="row">
